--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberBodyMeasurementPopUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberBodyMeasurementPopUp.cshtml
@@ -6,8 +6,7 @@
 }
 <!-- Page Content-->
 <div class="modal-header">
-    <h6 class="modal-title m-0" id="exampleModalDefaultLabel">+ Add</h6>
-
+    <h6 class="modal-title m-0" id="exampleModalDefaultLabel">Add @Model.BodyMeasurementType</h6>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div><!--end modal-header-->
 @using (Html.BeginForm("AddGymMemberBodyMeasurement", controllerName, FormMethod.Post, new { id = "frmGymMemberBodyMeasurement" }))
@@ -15,18 +14,25 @@
     @Html.AntiForgeryToken()
     ;
     @Html.HiddenFor(x => x.GymMemberDetailId)
-    @Html.HiddenFor(x => x.GymMemberBodyMeasurementId)
-   
+    @Html.HiddenFor(x => x.GymBodyMeasurementTypeId)
+    @Html.HiddenFor(x => x.PersonId)
+
     <div class="modal-body">
         <div class="row">
             <div class="col-lg-12">
                 <div class="mb-3">
+                    <label class="form-label" for="CreatedDate">Date</label>
+                    @Html.TextBoxFor(x => x.CreatedDate, new { @class = "form-control", disabled = "disabled" })
+                    @Html.ValidationMessageFor(x => x.CreatedDate)
+                </div>
+                <div class="mb-3">
                     @Html.LabelFor(x => x.BodyMeasurementValue, new { @class = "form-label required" })
-                    @Html.TextAreaFor(x => x.BodyMeasurementValue, new { @class = "form-control" })
+                    @Html.TextBoxFor(x => x.BodyMeasurementValue, new { @class = "form-control", @placeholder = @Model.BodyMeasurementType + "( in " + @Model.MeasurementUnitShortCode + ")", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
                     @Html.ValidationMessageFor(x => x.BodyMeasurementValue)
                 </div>
+
             </div>
-           
+
         </div><!-- end row -->
     </div>
 
