--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
@@ -7,22 +7,14 @@
 <!-- Page Content-->
 <div class="page-content">
     <div class="container-fluid">
-        <!-- Page-Title -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="row">
-                        <div class="col">
-                            <h4 class="page-title">Update Admin Sanction Post</h4>
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
+                    <div class="card-header">
+                        <div class="col">
+                            <h4 class="card-title"><span>Update Admin Sanction Post</span></h4>
+                        </div>
+                    </div>
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
@@ -36,31 +28,31 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled="disabled" })
+                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DepartmentName, new { @class = "form-control" , @disabled="disabled" })
+                                        @Html.TextBoxFor(x => x.DepartmentName, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SanctionPostCode, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.SanctionPostCode, new { @class = "form-control" , @disabled="disabled"})
+                                        @Html.TextBoxFor(x => x.SanctionPostCode, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SanctionedPostDescription, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.SanctionedPostDescription, new { @class = "form-control"  , @disabled="disabled" })
+                                        @Html.TextBoxFor(x => x.SanctionedPostDescription, new { @class = "form-control", @disabled = "disabled" })
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.NoOfPost, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.NoOfPost, new { @class = "form-control", @placeholder = "Number Of Post", @maxLength = "5", min="1", @type = "number" })
+                                        @Html.TextBoxFor(x => x.NoOfPost, new { @class = "form-control", @placeholder = "Number Of Post", @maxLength = "5", min = "1", @type = "number" })
                                         @Html.ValidationMessageFor(x => x.NoOfPost)
                                     </div>
                                 </div>
