--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_CreateEditGeneralEnum.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_CreateEditGeneralEnum.cshtml
@@ -33,7 +33,14 @@
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EnumName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EnumName, new { @class = "form-control" })
+                                        @if (Model.GeneralEnumaratorId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.EnumName, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.EnumName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabets()" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.EnumName)
                                     </div>
                                 </div>
