--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/List.cshtml
@@ -12,16 +12,14 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="row">
-                            <span class="card-title">@AdminResources.LabelRunningNumbersList</span>
-                        </div>
+                        <span class="card-title">@AdminResources.LabelRunningNumbersList</span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Running Number</a>
+                        <p class="text-muted mb-0"></p>
                     </div>
                     <div class="card-header">
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Running Numbers</a>
-                        <p class="text-muted mb-0"></p>
                         <div class="row">
                             <div class="col-md-1">
-                                <label>@AdminResources.LabelCentre </label>
+                                <label>@AdminResources.LabelCentre</label>
                             </div>
                             <div class="col-md-3">
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
