--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEditGymMember.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEditGymMember.cshtml
@@ -8,6 +8,7 @@
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
     keyValuePairs.Add("GymMemberDetailId", Model.GymMemberDetailId.ToString());
     keyValuePairs.Add("PersonId", Model.PersonId.ToString());
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "", IsDisabled = Model.GymMemberDetailId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -39,6 +40,15 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GymMemberDetailId)
+                            <div class="row">
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                        @Html.ValidationMessageFor(x => x.SelectedCentreCode)
+                                    </div>
+                                </div>
+                            </div>
                             @Html.Partial("~/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml", Model)
                         }
                     </div>
