--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/CreateEdit.cshtml
@@ -45,9 +45,9 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DisaplyText, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DisaplyText, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.DisaplyText)
+                                        @Html.LabelFor(x => x.DisplayText, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.DisplayText, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.DisplayText)
                                     </div>
                                 </div>
                             </div>
