--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -33,65 +33,36 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", departmentDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedDepartmentId)
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="md-4">
-                                        @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label" })
+                                <div class="col-lg-3">
+                                    <div class="md-3">
+                                        @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
-                                   DropdownType = DropdownTypeEnum.EmployeeMaster.ToString(),
+                                   DropdownType = DropdownTypeEnum.Employee.ToString(),
                                    DropdownName = "EmployeeId",
-                                   DropdownSelectedValue = Model.EmployeeId
+                                   DropdownSelectedValue = Model.HospitalDoctorId
                                     .ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.EmployeeId)
                                     </div>
                                 </div>
-                                @*  <div class="col-lg-4">
-                            <div class="mb-4">
-                            @Html.LabelFor(x => x.FirstName, new { @class = "form-label " })
-                            @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(x => x.FirstName)
-                            </div>
-                            </div>
-                            <div class="col-lg-4">
-                            <div class="mb-4">
-                            @Html.LabelFor(x => x.LastName, new { @class = "form-label " })
-                            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(x => x.LastName)
-                            </div>
-                            </div> *@
-                                <div class="col-lg-4">
-                                    <div class="mb-4">
-                                        @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.MobileNumber)
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.EmailId, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.EmailId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label " })
+                                        @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required "})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.MedicalSpecilizationEnumId.ToString(),
@@ -101,9 +72,9 @@
                                         @Html.ValidationMessageFor(x => x.MedicalSpecilizationEnumId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label " })
+                                        @Html.LabelFor(x => x.WeekDayEnumIds, new { @class = "form-label required"})
                                         @* @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                     {
                                     DropdownSelectedValue = Model.WeekDayEnumIds.ToString(),
@@ -113,9 +84,9 @@
                                         @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingRoomId, new { @class = "form-label " })
+                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingRoomId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.CentrewiseBuildingRooms.ToString(),
@@ -126,8 +97,21 @@
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingRoomId)
                                     </div>
                                 </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required"})
+                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MobileNumber)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.EmailId, new { @class = "form-label"})
+                                        @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.EmailId)
+                                    </div>
+                                </div>
                             </div>
-
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
