--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -56,15 +56,17 @@
                                             @Html.CheckBoxFor(x => x.IsEmployeeSmoker, new { @class = "form-check-input" })
                                         </div>
                                     </div>
-                                </div>                                
-                                    <div class="col-lg-4">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4">
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label required" })
                                             @Html.TextBoxFor(x => x.PANCardNumber, new { @class = "form-control", type = "number" })
                                             @Html.ValidationMessageFor(x => x.PANCardNumber)
                                         </div>
                                     </div>
-                                </div>
+                            
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.UANNumber, new { @class = "form-label required" })
@@ -78,7 +80,9 @@
                                         @Html.TextBoxFor(x => x.PassportNumber, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.PassportNumber)
                                     </div>
-                                </div>                                
+                                </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.AdharCardNumber, new { @class = "form-label required" })
@@ -100,6 +104,8 @@
                                         @Html.ValidationMessageFor(x => x.BankAccountNumber)
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.BankIFSCCode, new { @class = "form-label required" })
@@ -115,7 +121,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+                            </div>
 
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
