--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
@@ -16,11 +16,11 @@
                             <div class="col">
                                 @if (Model.OrganisationCentrewiseBuildingRoomId > 0)
                                 {
-                                    <h4 class="card-title">Update Building </h4>
+                                    <h4 class="card-title">Update Building Room</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Building </h4>
+                                    <h4 class="card-title">Create Building Room</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
