--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/_List.cshtml
@@ -18,8 +18,8 @@
                     foreach (var item in Model?.OrganisationCentrewiseBuildingRoomsList)
                     {
                         <tr>
-                            <td>@item.OrganisationCentrewiseBuildingMasterId</td>
-                            <td>@item.BuildFloorEnumId</td>
+                            <td>@item.BuildingName</td>
+                            <td>@item.BuildingFloor</td>
                             <td>@item.RoomName</td>
                             <td>@item.Area</td>
                             <td class="text-center">
