--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.OrganisationCentrewiseBuildingMasterId > 0 ? "Update Building" : "Add Building";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingRoomsByCentreCode()", IsDisabled = Model.OrganisationCentrewiseBuildingMasterId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content">
@@ -45,9 +45,9 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BuildName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.BuildName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.BuildName)
+                                        @Html.LabelFor(x => x.BuildingName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.BuildingName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.BuildingName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
