--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/_List.cshtml
@@ -18,7 +18,7 @@
                     foreach (var item in Model?.OrganisationCentrewiseBuildingList)
                     {
                         <tr>
-                            <td>@item.BuildName</td>
+                            <td>@item.BuildingName</td>
                             <td>@item.Area </td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?organisationCentrewiseBuildingId=@item.OrganisationCentrewiseBuildingMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
