Manual Attendance PopUp

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -4,6 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     ModelPopUpViewModel addFollowUpModel = new ModelPopUpViewModel() { ModelPopUpId = "AddUpdateFollowUpModelPopupId", ModalContentId = "AddUpdateFollowUpModelPopupContentId" };
+    ModelPopUpViewModel manualAttendanceModel = new ModelPopUpViewModel() { ModelPopUpId = "ManualAttendanceModelPopupId", ModalContentId = "ManualAttendanceModelPopupContentId" };
 }
 <div class="row">
     @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
@@ -30,6 +31,7 @@
                             <td class="text-center">
                                 <a href="../@controllerName/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a data-bs-toggle="modal" data-bs-target="#@addFollowUpModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberFollowUp('@addFollowUpModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Add Follow-Up" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas ti-user"></i></a><span class="m-2">|</span>
+                                <a data-bs-toggle="modal" data-bs-target="#@manualAttendanceModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.CreatEditGeneralPersonAttendanceDetails('@manualAttendanceModel.ModalContentId','@item.GymMemberDetailId','0','@item.PersonId')" title="Manual Attendance" class="btn btn-sm btn-soft-info btn-circle"><i class="fas ti-check"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?gymMemberDetailIds=@item.GymMemberDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
@@ -41,4 +43,5 @@
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
 @Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addFollowUpModel)
+//@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", manualAttendanceModel)
 
