--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -43,5 +43,5 @@
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
 @Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addFollowUpModel)
-//@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", manualAttendanceModel)
+@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", manualAttendanceModel)
 
