--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_GeneralPersonAttendanceDetailsList.cshtml
@@ -18,7 +18,7 @@
                     foreach (var item in Model?.GeneralPersonAttendanceDetailsList)
                     {
                         <tr>
-                            <td>@item.AttendanceDate</td>
+                            <td>@item.AttendanceDate.ToShortDateString()</td>
                             <td>@item.LoginTime</td>
                             <td>@item.LogoutTime</td>
                             <td>@item.Duration</td>
