--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
@@ -36,7 +36,7 @@
                 @Html.LabelFor(x => x.GeneralAttendanceStateEnumId, new { @class = "form-label required" })
                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
        {
-           DropdownSelectedValue = Model.GeneralAttendanceStateEnumId.ToString(),
+           DropdownSelectedValue = Convert.ToString(Model.GeneralAttendanceStateEnumId),
            DropdownName = "GeneralAttendanceStateEnumId",
            GroupCode = DropdownTypeEnum.AttendanceState.ToString(),
            IsTextValueSame = true,
@@ -62,60 +62,60 @@
     <div class="modal-footer">
         <a id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberDetails.SaveManualAttendance()">@AdminResources.LabelSave</a>
     </div>
-
-    <!-- Your custom scripts -->
-    @Html.Partial("_ValidationScriptsPartial")
-    <script src="~/js/layout/daterangepicker.js"></script>
-    <script src="~/js/coditech/gymmemberdetails.js"></script>
-
-    <script>
-        $(function () {
-            $('#AttendanceDate').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-                    "separator": " - ",
-                    "applyLabel": "Apply",
-                    "cancelLabel": "Cancel",
-                    "fromLabel": "From",
-                    "toLabel": "To",
-                    "customRangeLabel": "Custom",
-                    "weekLabel": "W",
-                    "daysOfWeek": [
-                        "Su",
-                        "Mo",
-                        "Tu",
-                        "We",
-                        "Th",
-                        "Fr",
-                        "Sa"
-                    ],
-                    "monthNames": [
-                        "January",
-                        "February",
-                        "March",
-                        "April",
-                        "May",
-                        "June",
-                        "July",
-                        "August",
-                        "September",
-                        "October",
-                        "November",
-                        "December"
-                    ],
-                    "firstDay": 1
-                },
-                maxDate: moment().startOf('day'), 
-                startDate: moment(), 
-                endDate: moment(), 
-            },
-                function (start, end, label) { });
-        });
-
-    </script>
 }
+<!-- Your custom scripts -->
+@Html.Partial("_ValidationScriptsPartial")
+<script src="~/js/layout/daterangepicker.js"></script>
+<script src="~/js/coditech/gymmemberdetails.js"></script>
+
+<script>
+    $(function () {
+        $('#AttendanceDate').daterangepicker({
+            singleDatePicker: true,
+            showDropdowns: true,
+            showWeekNumbers: false,
+            drops: "auto",
+            opens: "right",
+            autoApply: true,
+            "locale": {
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                    "Su",
+                    "Mo",
+                    "Tu",
+                    "We",
+                    "Th",
+                    "Fr",
+                    "Sa"
+                ],
+                "monthNames": [
+                    "January",
+                    "February",
+                    "March",
+                    "April",
+                    "May",
+                    "June",
+                    "July",
+                    "August",
+                    "September",
+                    "October",
+                    "November",
+                    "December"
+                ],
+                "firstDay": 1
+            },
+            maxDate: moment().startOf('day'),
+            startDate: moment(),
+            endDate: moment(),
+        },
+            function (start, end, label) { });
+    });
+
+</script>
+
