Code correctopn for employee

--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/EmployeeMaster/UpdateEmployeePersonalDetails?employeeId=@employeeId&personId=@personId" aria-selected="true">
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Personal Details</h5>
                 </a>
-                <a class="nav-link" href="/EmployeeMaster/GetEmployeeOtherDetail?employeeId=@employeeId" aria-selected="true">
+                <a class="nav-link" href="/EmployeeMaster/GetEmployeeOtherDetail?employeeId=@employeeId&personId=@personId" aria-selected="true">
                     <i class="ti-key"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
                 <a class="nav-link" href="/EmployeeMaster/EmployeeService?employeeId=@employeeId&personId=@personId" aria-selected="true">
