Code Checking  For Hospital Doctors .

--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/List.cshtml
@@ -13,11 +13,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        @* <div class="row">
-                            <span class="card-title">@AdminResources.LabelHospitalList</span>
-                        </div> *@
-                        <span class="card-title">Hospital Doctor List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Hospital Doctors</a>
+                        <span class="card-title">Hospital Doctor List</span> 
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Doctor</a>
                     </div>
                     <div class="card-header">
                        @*  <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateHospital" role="button"><i class="fas fa-plus me-2"></i>Add Hospital</a> *@
