--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -4,7 +4,11 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()" };
+    // DropdownViewModel buildingDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingByCentreCode()" };
+    // DropdownViewModel buildingRoomDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
+    // DropdownViewModel employeeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeMasterByCentreCode()" };
     DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode };
+    
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -31,21 +35,48 @@
                         {
                             @Html.HiddenFor(m => m.HospitalDoctorId)
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", departmentDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedDepartmentId)
                                     </div>
                                 </div>
-                            </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingMasterId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(),
+                                   DropdownName = "OrganisationCentrewiseBuildingMasterId",
+                                   DropdownSelectedValue = Model.OrganisationCentrewiseBuildingMasterId.ToString(),
+                                   Parameter = Model.SelectedCentreCode
+                               })
+                                        @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingMasterId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingRoomId, new { @class = "form-label required" })
+                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.CentrewiseBuildingRooms.ToString(),
+                                   DropdownName = "OrganisationCentrewiseBuildingRoomId",
+                                   DropdownSelectedValue = Model.OrganisationCentrewiseBuildingRoomId
+                                    .ToString(),
+                                   Parameter = Model.SelectedCentreCode
+                               }) 
+                                        @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingRoomId)
+                                    </div>
+                                </div>
+                          
                             <div class="row">
                                 <div class="col-lg-3">
                                     <div class="md-3">
@@ -54,8 +85,9 @@
                                {
                                    DropdownType = DropdownTypeEnum.Employee.ToString(),
                                    DropdownName = "EmployeeId",
-                                   DropdownSelectedValue = Model.HospitalDoctorId
-                                    .ToString()
+                                       DropdownSelectedValue = Model.EmployeeId
+                                    .ToString(),
+                                       Parameter = Model.SelectedCentreCode
                                })
                                         @Html.ValidationMessageFor(x => x.EmployeeId)
                                     </div>
@@ -79,41 +111,15 @@
                                     {
                                     DropdownSelectedValue = Model.WeekDayEnumIds.ToString(),
                                     DropdownName = "WeekDayEnumIds",
-                                    GroupCode = DropdownTypeEnum.WeekDays.ToString()
+                                   GroupCode = DropdownTypeEnum.WeekDays.ToString()
                                     }) *@
                                         @Html.ValidationMessageFor(x => x.WeekDayEnumIds)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingRoomId, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.CentrewiseBuildingRooms.ToString(),
-                                   DropdownName = "OrganisationCentrewiseBuildingRoomId",
-                                   DropdownSelectedValue = Model.OrganisationCentrewiseBuildingRoomId
-                                    .ToString()
-                               })
-                                        @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingRoomId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.MobileNumber)
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.EmailId, new { @class = "form-label"})
-                                        @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.EmailId)
-                                    </div>
-                                </div>
+                            </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
