--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -134,6 +134,7 @@
     <script src="~/js/coditech/user.js"></script>
     <script src="~/js/coditech/OrganisationCentrewiseDepartment.js"></script>
     <script src="~/js/coditech/OrganisationCentrewiseBuildingRooms.js"></script>
+    <script src="~/js/coditech/HSM/HospitalDoctors/HospitalDoctors.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
